<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.account.CreateAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="34dp"
        android:layout_marginTop="29sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFullName"
            style="@style/AccountTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvInputName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enes Arısoy" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvEmail"
            style="@style/AccountTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email_address" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvInputEmail"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="test@test.com"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvPassword"
            style="@style/AccountTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvInputPassword"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="**** **** ****"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_solid_color"
            android:fontFamily="@font/poppins_black"
            android:text="@string/sign_up"
            android:textSize="14sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginHorizontal="96dp"
            android:layout_marginVertical="13dp"
            android:background="#D2D4D8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoogleSignUp"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="13dp"
            android:background="@drawable/google_button"
            android:drawableLeft="@drawable/ic_google"
            android:drawablePadding="24dp"
            android:elevation="0dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingStart="35dp"
            android:text="@string/sign_up_with_google"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black" />


    </LinearLayout>


</FrameLayout>